fixed some broken styles

--- a/src/components/FilterComponent/FilterComponent.scss
+++ b/src/components/FilterComponent/FilterComponent.scss
@@ -1,10 +1,14 @@
-.filter {
+.checkboxes {
 	max-width: 1000px;
 	margin: 0 auto 20px auto;
 
+	&__heading {
+		color: var(--first-color);
+		text-transform: uppercase;
+	}
+
 	&__name {
-		margin-right: 10px;
-		margin-left: 5px;
+		margin-right: 15px;
 		color: var(--first-color);
 	}
 }
